src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <formula>Owner.Department</formula>
        <inlineHelpText>Current team / department of the account owner</inlineHelpText>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAR_ARPU__c</fullName>
        <description>ARPU for Channel Partner accounts, calculated as Total Active MRR/Active Store Count</description>
        <formula>PAR_Total_Active_MRR__c /  PAR_Active_Store_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ARPU for Channel Partner accounts, calculated as Total Active MRR/Active Store Count</inlineHelpText>
        <label>zPAR: ARPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_Active_Store_Count__c</fullName>
        <label>zPAR: Active Store Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAR_Commission__c</fullName>
        <inlineHelpText>Used for initial data load of Partner Commission details for Treehouse</inlineHelpText>
        <label>zPAR Commission %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PAR_Days_to_Approve__c</fullName>
        <description>Number of days from account creation to PAR Approved Date</description>
        <formula>Partner_Approved_Date__c - DateValue(CreatedDate)</formula>
        <inlineHelpText>Number of days from account creation to PAR Approved Date</inlineHelpText>
        <label>zPAR Days to Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAR_Declined_Reason_Detail__c</fullName>
        <label>zPAR Declined Reason Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAR_First_Rev_Date__c</fullName>
        <description>Date of first partner MRR on this partner account</description>
        <inlineHelpText>Date of first partner MRR on this partner account</inlineHelpText>
        <label>zPAR: First Rev Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAR_Onboarding_Flag__c</fullName>
        <formula>IF(ISBLANK(PAR_TTFR__c) &amp;&amp; Today()- Partner_Approved_Date__c &gt;= 90, IMAGE(&quot;/resource/1405031526000/CS_Flag_Red&quot;, &quot;90+ Days to First Rev&quot;, 20, 20),

IF(ISBLANK(PAR_TTFR__c) &amp;&amp; Today()- Partner_Approved_Date__c  &gt;= 30 &amp;&amp;  Today()-Partner_Approved_Date__c  &lt; 90, IMAGE(&quot;/resource/1379452927000/CS_Flag_Yellow&quot;, &quot;30-90 Days to SLA&quot;, 20, 20), 

IF(ISBLANK(PAR_TTFR__c) &amp;&amp; Today()- Partner_Approved_Date__c  &lt;30, IMAGE(&quot;/resource/1379452927000/CS_Flag_Green&quot;, &quot;Less than 30 Days&quot;, 20, 20), 
&quot;&quot;)))</formula>
        <inlineHelpText>Flag to denote status if partner has no brought first revenue yet.</inlineHelpText>
        <label>zPAR: Onboarding Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAR_Subsegment__c</fullName>
        <description>Partner team sub segmentation type</description>
        <inlineHelpText>Partner team sub segmentation type</inlineHelpText>
        <label>zPAR Subsegment</label>
        <picklist>
            <controllingField>Subtype__c</controllingField>
            <picklistValues>
                <fullName>Marketing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Service Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Publisher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Response Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento Certified/Gold-Silver Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goverment/Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance-Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UX/UI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PAR_TTFR__c</fullName>
        <description>How many days did it take this partner to first revenue?</description>
        <inlineHelpText>How many days did it take this partner to first revenue?</inlineHelpText>
        <label>zPAR: TTFR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAR_Total_Active_MRR__c</fullName>
        <label>zPAR: Total Active MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PDE_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the partner referral/applicant has been approved by a PDE. For use by the partner team.</description>
        <inlineHelpText>Indicates whether the partner referral/applicant has been approved by a PDE. For use by the partner team.</inlineHelpText>
        <label>zPAR PDE Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner source - for use in determining source of client account.</description>
        <inlineHelpText>Partner source - for use in determining source of client account.</inlineHelpText>
        <label>zPAR Partner Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Approved_Date__c</fullName>
        <description>Date that the partner was approved. For partner team use.</description>
        <inlineHelpText>Date that the partner was approved. For partner team use.</inlineHelpText>
        <label>zPAR Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Company_Description__c</fullName>
        <description>Partner company description. For use by the partner team.</description>
        <inlineHelpText>Partner company description. For use by the partner team.</inlineHelpText>
        <label>zPAR Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Address__c</fullName>
        <description>Contact form or email address for Partner. For use by the partner team.</description>
        <inlineHelpText>Contact form or email address for Partner. For use by the partner team. An email address or website URL where BigCommerce clients should go to get in touch with this partner. Examples: http://www.example.com/contact-us/, or contact@example.com.</inlineHelpText>
        <label>zPAR Contact Us URL or Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Level__c</fullName>
        <description>Partner Level. For use by the partner team.</description>
        <inlineHelpText>Partner Level. For use by the partner team.</inlineHelpText>
        <label>zPAR Partner Level</label>
        <picklist>
            <picklistValues>
                <fullName>Reseller (1-10 Stores)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner (11-50 Stores)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Partner (51+ Stores)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_No_of_Expected_Stores__c</fullName>
        <description>Number of expected stores. For use by the partner team.</description>
        <inlineHelpText>Number of expected stores. For use by the partner team.</inlineHelpText>
        <label>zPAR # of Expected Stores</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Pipeline_Revenue__c</fullName>
        <description>Expected revenue in partner&apos;s pipeline. For partner team use.</description>
        <inlineHelpText>Expected revenue in partner&apos;s pipeline. For partner team use.</inlineHelpText>
        <label>zPAR Pipeline Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Portfolio_URL__c</fullName>
        <description>Partner Portfolio URL. For use by the partner team.</description>
        <inlineHelpText>Partner Portfolio URL. For use by the partner team.</inlineHelpText>
        <label>zPAR Portfolio URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Partner_Services_Offered__c</fullName>
        <description>Services offered by partner. For partner team use.</description>
        <inlineHelpText>Services offered by partner. For partner team use.</inlineHelpText>
        <label>zPAR Services Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Store Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Engine Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Engine Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced (eg. Backoffice Integration)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_Source_Account_ID__c</fullName>
        <description>Partner Account ID. For use in reporting.</description>
        <formula>Partner_Account__r.Account_Unique_ID__c</formula>
        <inlineHelpText>Partner Account ID. For use in reporting.</inlineHelpText>
        <label>zPAR Partner Source Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Source_Channel_Partner_Campaign__c</fullName>
        <formula>TEXT( Partner_Account__r.Channel_Partner_Campaign__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PAR Source Channel Partner Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Source_Country__c</fullName>
        <description>Partner source country. For reporting use.</description>
        <formula>IF( Partner_Account__r.BillingCountry &lt;&gt;&quot;&quot;, Partner_Account__r.BillingCountry,  Partner_Account__r.ShippingCountry )</formula>
        <inlineHelpText>Partner source country. For reporting use.</inlineHelpText>
        <label>zPAR Partner Source Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Source_Owner__c</fullName>
        <description>for reporting &amp; account reassignment only</description>
        <formula>Partner_Account__r.Owner.FirstName &amp; &quot; &quot; &amp;  Partner_Account__r.Owner.LastName</formula>
        <inlineHelpText>Partner source owner (text field). For use in reporting.</inlineHelpText>
        <label>zPAR Partner Source Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Status__c</fullName>
        <description>Partner Status. For use by the patner team.</description>
        <inlineHelpText>Partner Status. For use by the patner team.</inlineHelpText>
        <label>zPAR Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Store_Forecast__c</fullName>
        <inlineHelpText>Estimate from the Partner of monthly amount of stores they expect to close</inlineHelpText>
        <label>zPAR Partner Store Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_iDevID__c</fullName>
        <label>iDev User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <description>Revenue share field used by finance and bizdev</description>
        <label>zPayment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>Revenue share field used by finance and bizdev</description>
        <label>zPayment Method</label>
        <picklist>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portal_Country__c</fullName>
        <description>used for new trial creation in the portal so partners have a list to pick from on the set-up page</description>
        <label>zPortal Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>----------</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua &amp; Deps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portal_Instructions__c</fullName>
        <description>Revenue share field used by finance and bizdev</description>
        <inlineHelpText>Instructions on how to get the necessary reporting data from the partner&apos;s portal</inlineHelpText>
        <label>zPortal Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Portal_Password__c</fullName>
        <description>Revenue share field used by finance and bizdev</description>
        <label>zPortal Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_URL__c</fullName>
        <description>Revenue share field used by finance and bizdev</description>
        <label>zPortal URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Portal_User_Name__c</fullName>
        <description>Revenue share field used by finance and bizdev</description>
        <label>zPortal User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a Premium Client Account?</description>
        <inlineHelpText>Is this a Premium Client Account?</inlineHelpText>
        <label>zPremium Client?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Test_Group__c</fullName>
        <description>Populated from lead convert. Used to indicate if lead was part of a marketing price testing group.</description>
        <inlineHelpText>Populated from lead convert. Used to indicate if lead was part of a marketing price testing group.</inlineHelpText>
        <label>zMKT Pricing Test Group</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_First_Name__c</fullName>
        <formula>AppDeveloperContact__r.FirstName</formula>
        <label>Primary Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Services_Notes__c</fullName>
        <description>Success Squad note section</description>
        <label>Professional Services Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Completion_Timeline__c</fullName>
        <description>design partner field</description>
        <label>zProject Completion Timeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_Revenue__c</fullName>
        <label>Projected Annual Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; $50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000 - $250,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$250,000 - $500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500,000 - $1,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000,000 - $2,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2,000,000 - $5,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000,000 - $50,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000,000 +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualified_Date__c</fullName>
        <description>When the most recent qualifier qualified this account</description>
        <inlineHelpText>When the most recent qualifier qualified this account</inlineHelpText>
        <label>Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualifier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the most recent qualifier</description>
        <inlineHelpText>Name of the most recent qualifier</inlineHelpText>
        <label>Lead Qualifier</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Qualifier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarterly_Revenue__c</fullName>
        <description>Partner&apos;s quarterly revenue. For use by the partner team.</description>
        <inlineHelpText>Partner&apos;s quarterly revenue. For use by the partner team.</inlineHelpText>
        <label>zPAR Quarterly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REPORT_Business_Days_to_Date__c</fullName>
        <description>Calculates the number of working days in a month based on the day of the month you are at</description>
        <formula>CASE(MOD( First_of_Month__c - DATE(1985,6,24),7),
0 , CASE( MOD( REPORT_Today_s_Date__c - First_of_Month__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( REPORT_Today_s_Date__c - First_of_Month__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( REPORT_Today_s_Date__c - First_of_Month__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( REPORT_Today_s_Date__c - First_of_Month__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( REPORT_Today_s_Date__c - First_of_Month__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( REPORT_Today_s_Date__c - First_of_Month__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( REPORT_Today_s_Date__c - First_of_Month__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( REPORT_Today_s_Date__c - First_of_Month__c)/7)*5)</formula>
        <label>REPORT: Business Days to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REPORT_Partner_Source_Type__c</fullName>
        <description>Text field of the partner account type value. For use in reporting.</description>
        <formula>TEXT(Partner_Account__r.Type)</formula>
        <inlineHelpText>Text field of the partner account type value. For use in reporting.</inlineHelpText>
        <label>zPAR Partner Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REPORT_Today_s_Date__c</fullName>
        <formula>TODAY()</formula>
        <label>REPORT: Today&apos;s Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Form_URL__c</fullName>
        <description>design partner referral process</description>
        <inlineHelpText>If the Design Partner requires leads to be sent to them via a web form, what is the URL of the form?</inlineHelpText>
        <label>zReferral Form URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Referral_Submission_Type__c</fullName>
        <description>Design Account referral program</description>
        <inlineHelpText>How does this Design Partner want to be informed of referrals coming from Bigcommerce?</inlineHelpText>
        <label>zReferral Submission Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_to_Hubspot__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use if you send this lead out to Hubspot</inlineHelpText>
        <label>zReferred to Hubspot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registered_Email_Address__c</fullName>
        <description>Affiliate revenue recognition visibility only</description>
        <inlineHelpText>Affiliate revenue recognition field</inlineHelpText>
        <label>zRegistered Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reporting_Frequency__c</fullName>
        <description>Revenue share field used by finance and bizdev</description>
        <label>zReporting Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Source__c</fullName>
        <description>Revenue share field used by finance and bizdev</description>
        <label>zReporting Source</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rev_Share__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Design Partner data for recommended accounts</description>
        <inlineHelpText>Does Bigcommerce have a revenue share agreement with this design partner?</inlineHelpText>
        <label>zRev Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Share__c</fullName>
        <description>for BizDev payouts</description>
        <label>zRevenue Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBD_Orion_Consultation_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SBD Orion Consultation Requested - mapped from lead on convert</description>
        <inlineHelpText>SBD Orion Consultation Requested - mapped from lead on convert</inlineHelpText>
        <label>zSBD Orion Consultation Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBD_Orion_Persona__c</fullName>
        <description>SBD Orion Persona</description>
        <label>zSBD Orion Persona</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Private_SSL_Certificate__c</fullName>
        <description>For Orion</description>
        <label>zSBD Private SSL Certificate</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBD_Referral_ID__c</fullName>
        <description>used in code logic to route stores based on ID and partner type</description>
        <label>zSBD Referral ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Segment__c</fullName>
        <description>For Orion</description>
        <label>zSBD Orion Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Store_Count__c</fullName>
        <description>For orion</description>
        <label>zSBD Store Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBD_Store_ID__c</fullName>
        <description>For Orion</description>
        <label>zSBD Store ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBD_Tenure__c</fullName>
        <description>For Orion</description>
        <label>zSBD Tenure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBD_Viewed_Offers_At__c</fullName>
        <description>For Orion</description>
        <label>zSBD Viewed Offers At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SBD_Viewed_Offers__c</fullName>
        <label>zSBD Viewed Offers</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBD__c</fullName>
        <description>For Orion</description>
        <label>zSBD Ebay Power User</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enterprise Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Decision_Date__c</fullName>
        <description>Date that Sales makes a decision on qualified account, or date that account is autoaccepted</description>
        <inlineHelpText>Date that Sales makes a decision on qualified account, or it is autoaccepted</inlineHelpText>
        <label>Sales Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Decision__c</fullName>
        <description>Status of an account that has been submitted to sales by a qualifier</description>
        <inlineHelpText>Status of an account that has been submitted to sales by a qualifier</inlineHelpText>
        <label>Sales Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Decision Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override - Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Auto-Accepted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Simon_s_Google_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for MRR reporting - can be deleted once project is done.  https://na13.salesforce.com/a01a000000fWNx9</description>
        <label>zSimon&apos;s Google Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Partner size. For use by the partner team.</description>
        <inlineHelpText>Partner size. For use by the partner team.</inlineHelpText>
        <label>zPAR Size</label>
        <picklist>
            <picklistValues>
                <fullName>xSmall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <label>Skype</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Indicates whether the account exists in MBA or BMP</description>
        <inlineHelpText>Indicates whether the account exists in MBA or BMP</inlineHelpText>
        <label>Provisioning System</label>
        <picklist>
            <picklistValues>
                <fullName>BMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specialties__c</fullName>
        <description>Design partner field</description>
        <label>zSpecialties</label>
        <type>TextArea</type>
    </fields>
</CustomObject>